# anchor-nft-staking-program

./: Anchor.toml  package-lock.json  package.json
programs/anchor-nft-staking/: Cargo.toml
programs/anchor-nft-staking/src/: error.rs  lib.rs
programs/anchor-nft-staking/src/instructions/: mod.rs  redeem.rs  stake.rs  unstake.rs
programs/anchor-nft-staking/src/state/: mod.rs  user_stake.rs
programs/lootbox-program/: Cargo.toml
programs/lootbox-program/src/: error.rs  lib.rs  state.rs
programs/lootbox-program/src/instructions/: consume_randomness.rs  init_user.rs  mod.rs  open_box.rs  open_lootbox.rs  retrieve_item.rs
programs/lootbox-program/src/state/: loot_box_pointer.rs  mod.rs
tests/: anchor-nft-staking.ts
tests/utils/: setupNft.ts  setupSwitchboard.ts
