[package]
name = "lootbox-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lootbox_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version="0.30.0", features=["init-if-needed"] }
anchor-spl = "0.30.0"
anchor-nft-staking = { path = "../anchor-nft-staking", features = ["cpi"] }